[tool.poetry]
name = "trackhhl"
version = "0.2.0"
description = ""
authors = ["Davide Nicotra <davide.nicotra@cern.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
scipy = "1.11.1"
qiskit = "0.42.1"
mplhep = "^0.3.30"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
matplotlib = "^3.7.2"
ipykernel = "^6.24.0"
scikit-learn = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
